# ree-mcp

./: .claude_mcp_config.json  .claude_mcp_config_uvx.json  .env.example  .gitignore  .mcp-config.json  CLAUDE.md  CLAUDE_CODE_SETUP.md  INSTALL_COMMAND.sh  LICENSE  PROJECT_SUMMARY.md  README.md  mypy-fix.patch  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: BRANCH_PROTECTION.md  SECURITY.md
.github/workflows/: ci.yml  e2e-tests.yml
src/ree_mcp/: __init__.py  __main__.py
src/ree_mcp/application/dtos/: __init__.py  indicator_request.py  indicator_response.py
src/ree_mcp/application/use_cases/: __init__.py  get_indicator_data.py  list_indicators.py  search_indicators.py
src/ree_mcp/domain/: exceptions.py
src/ree_mcp/domain/entities/: __init__.py  indicator.py  indicator_data.py  indicator_value.py
src/ree_mcp/domain/repositories/: __init__.py  indicator_repository.py
src/ree_mcp/domain/value_objects/: __init__.py  datetime_range.py  geographic_scope.py  indicator_id.py  measurement_unit.py  time_granularity.py
src/ree_mcp/infrastructure/config/: settings.py
src/ree_mcp/infrastructure/http/: __init__.py  ree_api_client.py
src/ree_mcp/infrastructure/repositories/: __init__.py  ree_indicator_repository.py
src/ree_mcp/interface/: __init__.py  indicator_config.py  mcp_server.py  tool_helpers.py  tool_services.py
tests/: __init__.py
tests/e2e/: test_mcp_server.py
tests/integration/infrastructure/: test_ree_api_client.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/interface/: __init__.py  test_indicator_config.py  test_tool_helpers.py
